Fixes #363 by enabling logging for rollups controlled by something other than the Org Default RollupControl__mdt CMDT record

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Making Rollup.flatten() safer",
-            "versionNumber": "1.5.39.0",
+            "versionName": "Logging updates to respect specific Rollup Controls when they differ from the Org Default",
+            "versionNumber": "1.5.40.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
