--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Removed chance for row with duplicate Id possibility in RollupCalcItemReplacer",
-            "versionNumber": "1.5.68.0",
+            "versionName": "Tech debt cleanup",
+            "versionNumber": "1.5.69.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -105,6 +105,7 @@
         "apex-rollup@1.5.65-0": "04t6g000008SnXoAAK",
         "apex-rollup@1.5.66-0": "04t6g000008SneHAAS",
         "apex-rollup@1.5.67-0": "04t6g000008SneWAAS",
-        "apex-rollup@1.5.68-0": "04t6g000008SnlYAAS"
+        "apex-rollup@1.5.68-0": "04t6g000008SnlYAAS",
+        "apex-rollup@1.5.69-0": "04t6g000008SnlnAAC"
     }
 }
