--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Test coverage for DELETE-based flows resetting values",
-            "versionNumber": "1.5.72.0",
+            "versionName": "Fixes an issue reported in #457 where using a Limit Amount in conjunction with first/last can throw an error if the number of children exceeds the limit amount",
+            "versionNumber": "1.5.73.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -105,6 +105,7 @@
         "apex-rollup@1.5.69-0": "04t6g000008SnlnAAC",
         "apex-rollup@1.5.70-0": "04t6g000008SnrXAAS",
         "apex-rollup@1.5.71-0": "04t6g000008So61AAC",
-        "apex-rollup@1.5.72-0": "04t6g000008So6QAAS"
+        "apex-rollup@1.5.72-0": "04t6g000008So6QAAS",
+        "apex-rollup@1.5.73-0": "04t6g000008So7xAAC"
     }
 }
