--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Allows multiple objects to roll up to same parent field from batch full recalcs",
-            "versionNumber": "1.5.74.0",
+            "versionName": "Fixes one to many grandparent rollup issue with adjacent children not getting pulled properly on updates",
+            "versionNumber": "1.5.75.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
