--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Fixes one to many grandparent rollup issue with adjacent children not getting pulled properly on updates",
-            "versionNumber": "1.5.75.0",
+            "versionName": "Memory overhead reduction and prevents stale parent values from being re-saved",
+            "versionNumber": "1.5.76.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -89,7 +89,6 @@
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
         "Apex Rollup - Custom Logger@0.0.12-0": "04t6g000008SjqIAAS",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
-        "Apex Rollup - Extra Code Coverage@0.0.15-0": "04t6g000008fjZaAAI",
         "Apex Rollup - Extra Code Coverage@0.0.16-0": "04t6g000008fje1AAA",
         "Apex Rollup - Extra Code Coverage@0.0.17-0": "04t6g000008nzvnAAA",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
@@ -100,12 +99,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.67-0": "04t6g000008SneWAAS",
-        "apex-rollup@1.5.68-0": "04t6g000008SnlYAAS",
-        "apex-rollup@1.5.69-0": "04t6g000008SnlnAAC",
-        "apex-rollup@1.5.70-0": "04t6g000008SnrXAAS",
-        "apex-rollup@1.5.71-0": "04t6g000008So61AAC",
-        "apex-rollup@1.5.72-0": "04t6g000008So6QAAS",
         "apex-rollup@1.5.73-0": "04t6g000008So7xAAC",
         "apex-rollup@1.5.74-0": "04t6g000008So9AAAS",
         "apex-rollup@1.5.75-0": "04t6g000008KRIbAAO"
