--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -68,11 +68,11 @@
             "package": "Apex Rollup - Extra Code Coverage",
             "versionDescription": "This plugin adds code coverage for Apex Rollup if you need additional code coverage for the base package",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.17.0",
+            "versionNumber": "0.0.18.0",
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.5.59-0"
+                    "package": "apex-rollup@1.5.76-0"
                 }
             ]
         },
@@ -89,8 +89,8 @@
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
         "Apex Rollup - Custom Logger@0.0.12-0": "04t6g000008SjqIAAS",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
-        "Apex Rollup - Extra Code Coverage@0.0.16-0": "04t6g000008fje1AAA",
         "Apex Rollup - Extra Code Coverage@0.0.17-0": "04t6g000008nzvnAAA",
+        "Apex Rollup - Extra Code Coverage@0.0.18-0": "04t6g000008C6gXAAS",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
@@ -101,6 +101,7 @@
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "apex-rollup@1.5.73-0": "04t6g000008So7xAAC",
         "apex-rollup@1.5.74-0": "04t6g000008So9AAAS",
-        "apex-rollup@1.5.75-0": "04t6g000008KRIbAAO"
+        "apex-rollup@1.5.75-0": "04t6g000008KRIbAAO",
+        "apex-rollup@1.5.76-0": "04t6g000008C6gSAAS"
     }
 }
