--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Fixes one to many grandparent rollup issue with adjacent children not getting pulled properly on updates",
-            "versionNumber": "1.5.75.0",
+            "versionName": "Memory overhead reduction and prevents stale parent values from being re-saved",
+            "versionNumber": "1.5.76.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -68,11 +68,11 @@
             "package": "Apex Rollup - Extra Code Coverage",
             "versionDescription": "This plugin adds code coverage for Apex Rollup if you need additional code coverage for the base package",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.17.0",
+            "versionNumber": "0.0.18.0",
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.5.59-0"
+                    "package": "apex-rollup@1.5.76-0"
                 }
             ]
         },
@@ -89,9 +89,8 @@
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
         "Apex Rollup - Custom Logger@0.0.12-0": "04t6g000008SjqIAAS",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
-        "Apex Rollup - Extra Code Coverage@0.0.15-0": "04t6g000008fjZaAAI",
-        "Apex Rollup - Extra Code Coverage@0.0.16-0": "04t6g000008fje1AAA",
         "Apex Rollup - Extra Code Coverage@0.0.17-0": "04t6g000008nzvnAAA",
+        "Apex Rollup - Extra Code Coverage@0.0.18-0": "04t6g000008C6gXAAS",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
@@ -100,14 +99,9 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.67-0": "04t6g000008SneWAAS",
-        "apex-rollup@1.5.68-0": "04t6g000008SnlYAAS",
-        "apex-rollup@1.5.69-0": "04t6g000008SnlnAAC",
-        "apex-rollup@1.5.70-0": "04t6g000008SnrXAAS",
-        "apex-rollup@1.5.71-0": "04t6g000008So61AAC",
-        "apex-rollup@1.5.72-0": "04t6g000008So6QAAS",
         "apex-rollup@1.5.73-0": "04t6g000008So7xAAC",
         "apex-rollup@1.5.74-0": "04t6g000008So9AAAS",
-        "apex-rollup@1.5.75-0": "04t6g000008KRIbAAO"
+        "apex-rollup@1.5.75-0": "04t6g000008KRIbAAO",
+        "apex-rollup@1.5.76-0": "04t6g000008C6ghAAC"
     }
 }
