Fixes cascading update issue in full recalc app, small improvements elsewhere

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Memory overhead reduction and prevents stale parent values from being re-saved",
-            "versionNumber": "1.5.76.0",
+            "versionName": "Fixes cascading issues with full recalc app, RollupParentResetProcessor improvements",
+            "versionNumber": "1.5.77.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
