--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -102,6 +102,7 @@
         "apex-rollup@1.5.73-0": "04t6g000008So7xAAC",
         "apex-rollup@1.5.74-0": "04t6g000008So9AAAS",
         "apex-rollup@1.5.75-0": "04t6g000008KRIbAAO",
-        "apex-rollup@1.5.76-0": "04t6g000008C6ghAAC"
+        "apex-rollup@1.5.76-0": "04t6g000008C6ghAAC",
+        "apex-rollup@1.5.77-0": "04t6g000008C6iTAAS"
     }
 }
