Updating flaky test to more accurately represent now-lower queries issued by Apex Rollup

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -103,6 +103,7 @@
         "apex-rollup@1.5.74-0": "04t6g000008So9AAAS",
         "apex-rollup@1.5.75-0": "04t6g000008KRIbAAO",
         "apex-rollup@1.5.76-0": "04t6g000008C6ghAAC",
-        "apex-rollup@1.5.77-0": "04t6g000008C6iYAAS"
+        "apex-rollup@1.5.77-0": "04t6g000008C6iYAAS",
+        "apex-rollup@1.5.78-0": "04t6g000008C6j7AAC"
     }
 }
