--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "RollupAsyncProcessor.retrieveAdditionalCalcItems no longer looks for null lookup fields. Further optimizations to prevent async runs when appropriate.",
-            "versionNumber": "1.5.78.0",
+            "versionName": "Prevents null pointer exception when cascasding rollups create a no-op rollup",
+            "versionNumber": "1.5.79.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -99,9 +99,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.73-0": "04t6g000008So7xAAC",
-        "apex-rollup@1.5.74-0": "04t6g000008So9AAAS",
-        "apex-rollup@1.5.75-0": "04t6g000008KRIbAAO",
         "apex-rollup@1.5.76-0": "04t6g000008C6ghAAC",
         "apex-rollup@1.5.77-0": "04t6g000008C6iYAAS",
         "apex-rollup@1.5.78-0": "04t6g000008C6jHAAS"
