--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "RollupCalcItemReplacer optimizations",
-            "versionNumber": "1.5.80.0",
+            "versionName": "Actual NPE fix",
+            "versionNumber": "1.5.81.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -103,6 +103,7 @@
         "apex-rollup@1.5.77-0": "04t6g000008C6iYAAS",
         "apex-rollup@1.5.78-0": "04t6g000008C6jHAAS",
         "apex-rollup@1.5.79-0": "04t6g000008C6kPAAS",
-        "apex-rollup@1.5.80-0": "04t6g000008C6kjAAC"
+        "apex-rollup@1.5.80-0": "04t6g000008C6kjAAC",
+        "apex-rollup@1.5.81-0": "04t6g000008C6kyAAC"
     }
 }
