--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Actual NPE fix",
-            "versionNumber": "1.5.81.0",
+            "versionName": "Reducing heap size",
+            "versionNumber": "1.5.82.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -104,6 +104,7 @@
         "apex-rollup@1.5.78-0": "04t6g000008C6jHAAS",
         "apex-rollup@1.5.79-0": "04t6g000008C6kPAAS",
         "apex-rollup@1.5.80-0": "04t6g000008C6kjAAC",
-        "apex-rollup@1.5.81-0": "04t6g000008C6kyAAC"
+        "apex-rollup@1.5.81-0": "04t6g000008C6kyAAC",
+        "apex-rollup@1.5.82-0": "04t6g000008C6lXAAS"
     }
 }
