--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Update layout tab ordering",
+            "versionName": "Update layout tab ordering, added friendly error message for misspellings in rollup configuration, optimizations for recursive rollups",
             "versionNumber": "1.5.83.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
@@ -99,10 +99,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.76-0": "04t6g000008C6ghAAC",
-        "apex-rollup@1.5.77-0": "04t6g000008C6iYAAS",
-        "apex-rollup@1.5.78-0": "04t6g000008C6jHAAS",
-        "apex-rollup@1.5.79-0": "04t6g000008C6kPAAS",
         "apex-rollup@1.5.80-0": "04t6g000008C6kjAAC",
         "apex-rollup@1.5.81-0": "04t6g000008C6kyAAC",
         "apex-rollup@1.5.82-0": "04t6g000008C6lXAAS"
