--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -72,7 +72,7 @@
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.5.82-0"
+                    "package": "apex-rollup@1.5.83-0"
                 }
             ]
         },
@@ -90,7 +90,7 @@
         "Apex Rollup - Custom Logger@0.0.12-0": "04t6g000008SjqIAAS",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
         "Apex Rollup - Extra Code Coverage@0.0.18-0": "04t6g000008C6gXAAS",
-        "Apex Rollup - Extra Code Coverage@0.0.19-0": "04t6g000008C6rCAAS",
+        "Apex Rollup - Extra Code Coverage@0.0.19-0": "04t6g000008C6rRAAS",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
@@ -99,7 +99,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.80-0": "04t6g000008C6kjAAC",
         "apex-rollup@1.5.81-0": "04t6g000008C6kyAAC",
         "apex-rollup@1.5.82-0": "04t6g000008C6lXAAS",
         "apex-rollup@1.5.83-0": "04t6g000008C6rHAAS"
