--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Reducing heap size",
-            "versionNumber": "1.5.82.0",
+            "versionName": "Update layout tab ordering, added friendly error message for misspellings in rollup configuration, optimizations for recursive rollups",
+            "versionNumber": "1.5.83.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -68,11 +68,11 @@
             "package": "Apex Rollup - Extra Code Coverage",
             "versionDescription": "This plugin adds code coverage for Apex Rollup if you need additional code coverage for the base package",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.18.0",
+            "versionNumber": "0.0.19.0",
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.5.76-0"
+                    "package": "apex-rollup@1.5.83-0"
                 }
             ]
         },
@@ -89,8 +89,8 @@
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
         "Apex Rollup - Custom Logger@0.0.12-0": "04t6g000008SjqIAAS",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
-        "Apex Rollup - Extra Code Coverage@0.0.17-0": "04t6g000008nzvnAAA",
         "Apex Rollup - Extra Code Coverage@0.0.18-0": "04t6g000008C6gXAAS",
+        "Apex Rollup - Extra Code Coverage@0.0.19-0": "04t6g000008C6rRAAS",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
@@ -99,12 +99,8 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.76-0": "04t6g000008C6ghAAC",
-        "apex-rollup@1.5.77-0": "04t6g000008C6iYAAS",
-        "apex-rollup@1.5.78-0": "04t6g000008C6jHAAS",
-        "apex-rollup@1.5.79-0": "04t6g000008C6kPAAS",
-        "apex-rollup@1.5.80-0": "04t6g000008C6kjAAC",
         "apex-rollup@1.5.81-0": "04t6g000008C6kyAAC",
-        "apex-rollup@1.5.82-0": "04t6g000008C6lXAAS"
+        "apex-rollup@1.5.82-0": "04t6g000008C6lXAAS",
+        "apex-rollup@1.5.83-0": "04t6g000008C6rHAAS"
     }
 }
